# agent

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  api_server.py  main.py  memory_tools.py  requirements.txt  test.py
.claude/: settings.local.json
frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: AudioPlayer.tsx  ChatInput.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  MemoryViewer.tsx  MessageBubble.tsx  MessageList.tsx  Notification.tsx  NotificationsProvider.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/sidebar/: SidebarContent.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  divider.tsx  input.tsx  scroll-area.tsx  tooltip.tsx
frontend/src/hooks/: use-keyboard-shortcuts.ts  use-notifications.ts  use-theme.ts
frontend/src/lib/: api-client.ts  api.ts
memory/: 2026-04-27.md  MEMORY.md  SOUL.md
